refactor so that each API endpoin reads data from disk and writes results back to disk. Cleaner separation between cases by adding more endpoints