@@ -1,7 +1,3 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Project/Maven2/JavaApp/src/main/java/${packagePath}/${mainClassName}.java to edit this template
- */
 package net.clementlevallois.importers.import_csv.controller;
 
 import com.sigpwned.chardet4j.Chardet;
@@ -19,77 +15,106 @@ import net.clementlevallois.importers.model.SheetModel;
 import org.jsoup.Jsoup;
 import org.jsoup.safety.Safelist;
 
-/**
- *
- * @author LEVALLOIS
- */
 public class CsvImporter {
 
-    public static void main(String[] args) {
-        System.out.println("Hello World!");
-    }
+    public List<SheetModel> importCsvFile(byte[] bytes, String fileName) {
+        List<SheetModel> sheets = new ArrayList<>();
 
-    public List<SheetModel> importCsvFile(byte[] bytes, String fileName, String functionName, String gazeOption) {
-        List<SheetModel> sheets = new ArrayList();
-        Reader reader = null;
-        try {
-            CsvParserSettings settings = new CsvParserSettings();
-            settings.detectFormatAutomatically();
-            settings.setMaxCharsPerColumn(-1);
-            CsvParser parser = new CsvParser(settings);
-            ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
-            reader = Chardet.decode(byteArrayInputStream, StandardCharsets.UTF_8);
+        CsvParserSettings settings = new CsvParserSettings();
+        settings.detectFormatAutomatically();
+        settings.setMaxCharsPerColumn(-1);
+        CsvParser parser = new CsvParser(settings);
+
+        try (Reader reader = Chardet.decode(new ByteArrayInputStream(bytes), StandardCharsets.UTF_8)) {
             List<String[]> rows = parser.parseAll(reader);
-            // if you want to see what delimiter it detected
-//            CsvFormat format = parser.getDetectedFormat();
+
+            if (rows.isEmpty()) {
+                return sheets;
+            }
+
             SheetModel sheetModel = new SheetModel();
             sheetModel.setName(fileName);
-            ColumnModel cm;
-            List<ColumnModel> headerNames = new ArrayList();
-            String[] firstLine = rows.get(0);
-            int h = 0;
-            String substituteHeader = "ABCDEFGHIJKLMNOPQRSTUVWYZ";
+
+            List<ColumnModel> headerNames = new ArrayList<>();
+            String[] firstLine = rows.getFirst();
+            String substituteHeaderChars = "ABCDEFGHIJKLMNOPQRSTUVWYZ";
             int indexEmptyHeader = 0;
-            for (String header : firstLine) {
-                if (header == null) {
-                    header = "header was empty! " + String.valueOf(substituteHeader.charAt(indexEmptyHeader));
-                    indexEmptyHeader++;
-                    if (indexEmptyHeader > substituteHeader.length() - 1) {
-                        indexEmptyHeader = 0;
-                    }
+
+            for (int h = 0; h < firstLine.length; h++) {
+                String header = firstLine[h];
+                if (header == null || header.isBlank()) {
+                    header = "header was empty! " + substituteHeaderChars.charAt(indexEmptyHeader);
+                    indexEmptyHeader = (indexEmptyHeader + 1) % substituteHeaderChars.length();
                 }
                 header = Jsoup.clean(header, Safelist.basicWithImages().addAttributes("span", "style"));
-                cm = new ColumnModel(String.valueOf(h++), header);
-                headerNames.add(cm);
+                headerNames.add(new ColumnModel(String.valueOf(h), header));
             }
             sheetModel.setTableHeaderNames(headerNames);
-            int j = 0;
-            for (String[] row : rows) {
-                int i = 0;
-                for (String field : row) {
+
+            for (int j = 0; j < rows.size(); j++) {
+                String[] row = rows.get(j);
+                for (int i = 0; i < row.length; i++) {
+                    String field = row[i];
                     if (field == null) {
                         field = "";
                     }
                     field = Jsoup.clean(field, Safelist.basicWithImages().addAttributes("span", "style"));
-                    CellRecord cellRecord = new CellRecord(j, i++, field);
-                    sheetModel.addCellRecord(cellRecord);
+                    sheetModel.addCellRecord(new CellRecord(j, i, field));
                 }
-                j++;
             }
             sheets.add(sheetModel);
             parser.stopParsing();
-            return sheets;
         } catch (IOException ex) {
-            System.out.println("error when reading csv file");
-            System.out.println(ex.getMessage());
-        } finally {
-            try {
-                reader.close();
-            } catch (IOException ex) {
-                System.out.println("error when closing csv file at the reading stage");
-                System.out.println(ex.getMessage());
-            }
+            System.err.println("Error when reading CSV file: " + ex.getMessage());
         }
         return sheets;
+    }
+
+    public String importCsvFileToSimpleLines(byte[] bytes, int colIndex, boolean hasHeaders) {
+        StringBuilder result = new StringBuilder();
+        CsvParserSettings settings = new CsvParserSettings();
+        settings.detectFormatAutomatically();
+        settings.setMaxCharsPerColumn(-1);
+        CsvParser parser = new CsvParser(settings);
+
+        try (Reader reader = Chardet.decode(new ByteArrayInputStream(bytes), StandardCharsets.UTF_8)) {
+            List<String[]> rows = parser.parseAll(reader);
+
+            if (rows.isEmpty()) {
+                return "";
+            }
+
+            int startRow = 0;
+            if (hasHeaders) {
+                // Add the header from the selected column if it exists and hasHeaders is true
+                String[] firstLine = rows.getFirst();
+                if (colIndex >= 0 && colIndex < firstLine.length) {
+                    String header = firstLine[colIndex];
+                    result.append(cleanAndSanitize(header)).append(System.lineSeparator());
+                }
+                startRow = 1; // Start processing from the second row (data rows)
+            }
+
+            // Iterate through the rows, starting from 'startRow'
+            for (int j = startRow; j < rows.size(); j++) {
+                String[] row = rows.get(j);
+                if (colIndex >= 0 && colIndex < row.length) {
+                    String field = row[colIndex];
+                    result.append(cleanAndSanitize(field)).append(System.lineSeparator());
+                }
+            }
+            parser.stopParsing();
+        } catch (IOException ex) {
+            System.err.println("Error when reading CSV file: " + ex.getMessage());
+        }
+        return result.toString();
+    }
+
+    private String cleanAndSanitize(String text) {
+        if (text == null) {
+            return "";
+        }
+        // Sanitize HTML content
+        return Jsoup.clean(text, Safelist.basicWithImages().addAttributes("span", "style"));
     }
 }
